; ModuleID = '/home/carl/AnghaBench/git/extr_attr.c_push_stack.c'
source_filename = "/home/carl/AnghaBench/git/extr_attr.c_push_stack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.attr_stack = type { i8*, i64, %struct.attr_stack* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.attr_stack**, %struct.attr_stack*, i8*, i64)* @push_stack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @push_stack(%struct.attr_stack** %0, %struct.attr_stack* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.attr_stack**, align 8
  %6 = alloca %struct.attr_stack*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store %struct.attr_stack** %0, %struct.attr_stack*** %5, align 8
  store %struct.attr_stack* %1, %struct.attr_stack** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.attr_stack*, %struct.attr_stack** %6, align 8
  %10 = icmp ne %struct.attr_stack* %9, null
  br i1 %10, label %11, label %28

11:                                               ; preds = %4
  %12 = load i8*, i8** %7, align 8
  %13 = load %struct.attr_stack*, %struct.attr_stack** %6, align 8
  %14 = getelementptr inbounds %struct.attr_stack, %struct.attr_stack* %13, i32 0, i32 0
  store i8* %12, i8** %14, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %21

17:                                               ; preds = %11
  %18 = load i64, i64* %8, align 8
  %19 = load %struct.attr_stack*, %struct.attr_stack** %6, align 8
  %20 = getelementptr inbounds %struct.attr_stack, %struct.attr_stack* %19, i32 0, i32 1
  store i64 %18, i64* %20, align 8
  br label %21

21:                                               ; preds = %17, %11
  %22 = load %struct.attr_stack**, %struct.attr_stack*** %5, align 8
  %23 = load %struct.attr_stack*, %struct.attr_stack** %22, align 8
  %24 = load %struct.attr_stack*, %struct.attr_stack** %6, align 8
  %25 = getelementptr inbounds %struct.attr_stack, %struct.attr_stack* %24, i32 0, i32 2
  store %struct.attr_stack* %23, %struct.attr_stack** %25, align 8
  %26 = load %struct.attr_stack*, %struct.attr_stack** %6, align 8
  %27 = load %struct.attr_stack**, %struct.attr_stack*** %5, align 8
  store %struct.attr_stack* %26, %struct.attr_stack** %27, align 8
  br label %28

28:                                               ; preds = %21, %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
